# RAG_projects

Rich_Typer_exam/: readme.md  rich_exam.py  rich_exam_markdown_table.py  rich_exam_progressbar.py  rich_panel.py  simple_memo.py  typer_exam_app.py  typer_exam_baic.py  typer_rich_exam.py
inheritance_tax/: .gitignore  explain.md  pyproject.toml  readme.md  requirements.txt  test.ipynb
inheritance_tax/scripts/: index_documents.py
inheritance_tax/src/: __init__.py  config.py  main.py
inheritance_tax/src/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
inheritance_tax/src/chain/: __init__.py  prompts.py  rag_chain.py
inheritance_tax/src/cli/: __init__.py  interface.py
inheritance_tax/src/document/: __init__.py  loader.py  preprocessor.py  splitter.py
inheritance_tax/src/retriever/: __init__.py  base_retriever.py  hybrid_retriever.py
inheritance_tax/src/vectorstore/: __init__.py  embeddings.py  indexer.py  qdrant_store.py
inheritance_tax/tests/: test_agent.py  test_loader.py  test_retriever.py
